force-app/main/default/objects/Opportunity/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Privacy_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Customer&apos;s Business Account Number</description>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>