force-app/main/default/objects/Opportunity/fields/AIP_Requested__c.field-meta.xml
<CustomField>
    <fullName>AIP_Requested__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Tick the box Yes for AIP and leave unticked if Full Approval is required.</description>
    <label>AIP Requested</label>
    <type>Checkbox</type>
</CustomField>