force-app/main/default/objects/Opportunity/fields/Application_Key__c.field-meta.xml
<CustomField>
    <fullName>Application_Key__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Simpology</complianceGroup>
    <description>The system application key returned by Simpology identifying the application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>