force-app/main/default/objects/Opportunity/fields/Application_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Application_Numbers__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Application Number from RLS or CAP</description>
    <label>Application Number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>