force-app/main/default/objects/Opportunity/fields/Approval_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiry_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>NCCP Expiry Date as communicated in the Conditional Approval Advice and Full Approval Advice sent by Operations</description>
    <label>Approval Expiry Date</label>
    <type>Date</type>
</CustomField>