force-app/main/default/objects/Opportunity/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Amount approved in RLM/RLS</description>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>