force-app/main/default/objects/Opportunity/fields/Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Application Decision code, translated to a standard description</description>
    <label>Assessment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved Subject To</fullName>
            </value>
            <value>
                <fullName>Approved In Principle</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>