force-app/main/default/objects/Opportunity/fields/Assessment_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Date assessment outcome recorded</description>
    <label>Assessment Outcome Date</label>
    <type>Date</type>
</CustomField>