force-app/main/default/objects/Opportunity/fields/Associated_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Associated_Source_Detail__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Dependent Picklist on Lead Source. If Lead Source = Internal Referral , External Referral or Self-Sourced, then this field is mandatory.</description>
    <inlineHelpText>Please select an appropriate drill down value for Lead Source.</inlineHelpText>
    <label>Associated Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ - SBS</fullName>
            </value>
            <value>
                <fullName>ANZ - BBM</fullName>
            </value>
            <value>
                <fullName>ANZ - SBM</fullName>
            </value>
            <value>
                <fullName>ANZ - RM</fullName>
            </value>
            <value>
                <fullName>ANZ - Product Partner</fullName>
            </value>
            <value>
                <fullName>ANZ - Branch</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>ANZ Customer</fullName>
            </value>
            <value>
                <fullName>Internal Seminar</fullName>
            </value>
            <value>
                <fullName>External Seminar</fullName>
            </value>
            <value>
                <fullName>Non-ANZ Customer</fullName>
            </value>
            <value>
                <fullName>Other source detail</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>ANZ Car</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Database &amp; Telemarketing</fullName>
            </value>
            <value>
                <fullName>Webpage</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Billboards &amp; Posters</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Sponsorships</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Home Loan Introducer Program (HLIP)</fullName>
                <isActive>false</isActive>
                <label>Home Loan Introducer Program (HLIP)</label>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Retail Branch</fullName>
            </value>
            <value>
                <fullName>Commercial Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>