force-app/main/default/objects/Opportunity/fields/BBD_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>BBD_Application_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Credit case reference number from BBD.</description>
    <inlineHelpText>Please enter the credit case reference number from BBD.</inlineHelpText>
    <label>BBD Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>