force-app/main/default/objects/Opportunity/fields/BCOP_Email_sent__c.field-meta.xml
<CustomField>
    <fullName>BCOP_Email_sent__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Banker sets this field after the Product Selection.</description>
    <label>BCOP Email sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>