force-app/main/default/objects/Opportunity/fields/Borrowing_Power__c.field-meta.xml
<CustomField>
    <fullName>Borrowing_Power__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Borrowing power of the customer</description>
    <label>Borrowing Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>