force-app/main/default/objects/Opportunity/fields/Broker_Involved__c.field-meta.xml
<CustomField>
    <fullName>Broker_Involved__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Indicates if a Broker is involved in the Opportunity.</description>
    <label>Broker Involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>