force-app/main/default/objects/Opportunity/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for accredited broker</description>
    <label>Broker Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Accreditation_CompactLayout__c</field>
            <operation>contains</operation>
            <value>Commercial</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Broker Name)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>