force-app/main/default/objects/Opportunity/fields/Can_Create_Loanapp__c.field-meta.xml
<CustomField>
    <fullName>Can_Create_Loanapp__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula field to control visibility of Create Loanapp button</description>
    <formula>AND(
  TEXT(StageName) = &quot;Needs Analysis&quot;,
  $Permission.ML_Allow_Opportunity_Creation,
  ISBLANK( Loanapp_Reference__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Create Loanapp</label>
    <type>Checkbox</type>
</CustomField>