force-app/main/default/objects/Opportunity/fields/Cancelled_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason_Detail__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Cancelled reason detail</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Reason Detail</label>
    <type>TextArea</type>
</CustomField>