force-app/main/default/objects/Opportunity/fields/Circle_Of_Influence__c.field-meta.xml
<CustomField>
    <fullName>Circle_Of_Influence__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Circle of Influence</description>
    <label>Circle Of Influence</label>
    <referenceTo>Circle_Of_Influence__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>