force-app/main/default/objects/Opportunity/fields/CLG__c.field-meta.xml
<CustomField>
    <fullName>CLG__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated CLG Account Record.</description>
    <label>CLG</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (CLG)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>