force-app/main/default/objects/Opportunity/fields/CLG_ID__c.field-meta.xml
<CustomField>
    <fullName>CLG_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_OCV</complianceGroup>
    <description>Customer lending group number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CLG ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>