force-app/main/default/objects/Opportunity/fields/CLG_Name__c.field-meta.xml
<CustomField>
    <fullName>CLG_Name__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <formula>Account.CLG__c</formula>
    <label>CLG Name</label>
    <type>Text</type>
</CustomField>