force-app/main/default/objects/Opportunity/fields/CLP_Credit_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CLP_Credit_Case_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Banker captures the CLP Credit Case Number at the Solution Development stage.</description>
    <inlineHelpText>Please enter the credit case reference number from CLP.</inlineHelpText>
    <label>CLP Credit Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>