force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Composite field of lead contact&apos;s first name, last name, contact number, email id, contact role / title</description>
    <inlineHelpText>The Lead contact or main customer contact for this Opportunity.</inlineHelpText>
    <label>Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>