force-app/main/default/objects/Opportunity/fields/Customer_Needs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Needs__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Customer needs that are captured from Lead Conversion \ Opportunity Creation.</description>
    <label>Customer Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchasing Property</fullName>
            </value>
            <value>
                <fullName>Purchasing Vacant Land</fullName>
            </value>
            <value>
                <fullName>Purchasing an existing Business</fullName>
            </value>
            <value>
                <fullName>Purchasing a new Business</fullName>
            </value>
            <value>
                <fullName>Purchasing equipment (inc. vehicles and fit out)</fullName>
                <label>Purchasing Equipment (including vehicles, plant and machinery)</label>
            </value>
            <value>
                <fullName>Set up a new Business (Start Up)</fullName>
            </value>
            <value>
                <fullName>Assist with Business Working Capital/Temporary Finance</fullName>
            </value>
            <value>
                <fullName>Refinance from Other Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Construction and Renovation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Home Loan - Bridging Finance</fullName>
            </value>
            <value>
                <fullName>Home Loan - Construction</fullName>
            </value>
            <value>
                <fullName>Home Loan - Refinance + Purchase</fullName>
            </value>
            <value>
                <fullName>Home Loan - Purchase</fullName>
            </value>
            <value>
                <fullName>Home Loan - Refinance</fullName>
            </value>
            <value>
                <fullName>Home Loan - Maintenance</fullName>
            </value>
            <value>
                <fullName>Home Loan - Increase</fullName>
            </value>
            <value>
                <fullName>Home Loan - Other</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
            <value>
                <fullName>Other Loans</fullName>
            </value>
            <value>
                <fullName>Transactional Services (inc. IB4B, Account opening and Merchant services)</fullName>
            </value>
            <value>
                <fullName>ANZ Plus Home Loan - Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>