force-app/main/default/objects/Opportunity/fields/Documents_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Documents_Issued_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Date offer and security documents issued to the customer</description>
    <label>Documents Issued Date</label>
    <type>Date</type>
</CustomField>