force-app/main/default/objects/Opportunity/fields/Documents_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Documents_Signed_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Date offer and security documents signed/returned by the customer</description>
    <label>Documents Signed Date</label>
    <type>Date</type>
</CustomField>