force-app/main/default/objects/Opportunity/fields/DTI__c.field-meta.xml
<CustomField>
    <fullName>DTI__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Debt to Income Ratio as calculated by CDP for CAP, RLS, Simpology</description>
    <label>DTI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>