force-app/main/default/objects/Opportunity/fields/Eligible_for_FHOG__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_FHOG__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To indicate First Home Owner Grant (FHOG)</description>
    <label>Eligible for FHOG</label>
    <type>Checkbox</type>
</CustomField>