force-app/main/default/objects/Opportunity/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Estimated revenue for the product</description>
    <inlineHelpText>Please enter estimated revenue</inlineHelpText>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>