force-app/main/default/objects/Opportunity/fields/Expected_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Assessment_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Date assessment expected, as communicated by the Sufficiency Advice sent by Operations</description>
    <label>Expected Assessment Date</label>
    <type>Date</type>
</CustomField>