force-app/main/default/objects/Opportunity/fields/Expected_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Settlement_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Expected settlement date, becomes actual settlement date once settlement has occurred</description>
    <label>Expected Settlement Date</label>
    <type>Date</type>
</CustomField>