force-app/main/default/objects/Opportunity/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Next follow up date</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>