force-app/main/default/objects/Opportunity/fields/Has_Close_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Has_Close_Date_Changed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Close date can only be changed once. This fields is set to true once date is changed.</description>
    <label>Has Close Date Changed</label>
    <type>Checkbox</type>
</CustomField>