force-app/main/default/objects/Opportunity/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Date of customer interview</description>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>