force-app/main/default/objects/Opportunity/fields/Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Opportunity created from Lead conversion</description>
    <label>Lead Converted</label>
    <type>Checkbox</type>
</CustomField>