force-app/main/default/objects/Opportunity/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Lead Number of the source converted lead</description>
    <label>Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>