force-app/main/default/objects/Opportunity/fields/LegalEntitiesandProductNotes__c.field-meta.xml
<CustomField>
    <fullName>LegalEntitiesandProductNotes__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Relationship notes for Entity and products</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List legal entities and the products each entity requires. Include any additional notes to support setup or processing.</inlineHelpText>
    <label>Legal Entities and Product Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>