force-app/main/default/objects/Opportunity/fields/LMI_Applies__c.field-meta.xml
<CustomField>
    <fullName>LMI_Applies__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates whether LMI applies to the application</description>
    <label>LMI Applies</label>
    <type>Checkbox</type>
</CustomField>