force-app/main/default/objects/Opportunity/fields/Loanapp_Reference__c.field-meta.xml
<CustomField>
    <fullName>Loanapp_Reference__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Simpology Application Reference Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Loanapp Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>