force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>List of reasons.</description>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Customer Need Change</fullName>
            </value>
            <value>
                <fullName>Declined by Credit</fullName>
            </value>
            <value>
                <fullName>Declined by Manager</fullName>
            </value>
            <value>
                <fullName>Not Proceeding</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Proposition</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>Application Withdrawn</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>