force-app/main/default/objects/Opportunity/fields/Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Detail__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lost Reason Detail when Opportunity Lost.</description>
    <label>Lost Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>