force-app/main/default/objects/Opportunity/fields/LVR__c.field-meta.xml
<CustomField>
    <fullName>LVR__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Loan Value Ratio inclusive of LMI, displayed to two decimal places</description>
    <label>LVR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>