force-app/main/default/objects/Opportunity/fields/Material_change__c.field-meta.xml
<CustomField>
    <fullName>Material_change__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To indicate to lender if upfront commission is applicable</description>
    <label>Material change for commission</label>
    <type>Checkbox</type>
</CustomField>