force-app/main/default/objects/Opportunity/fields/Multiple_Products__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Products__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>There are more than one product in this Opportunity</description>
    <formula>Product_Count__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiple Products</label>
    <type>Checkbox</type>
</CustomField>