force-app/main/default/objects/Opportunity/fields/My_Manager_Opps__c.field-meta.xml
<CustomField>
    <fullName>My_Manager_Opps__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>My Manager&apos;s Opportunity</description>
    <formula>Owner.Id= $User.ManagerId</formula>
    <label>My Managers Opps</label>
    <type>Checkbox</type>
</CustomField>